# oxicop

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  QUICK_REFERENCE.txt  README.md  RELEASE.md
.github/workflows/: ci.yml  publish.yml
src/: config.rs  cop.rs  formatter.rs  lib.rs  main.rs  offense.rs  registry.rs  runner.rs  source.rs
src/cops/: bundler_gemspec.rs  layout.rs  layout_extra.rs  lint.rs  lint_extra.rs  metrics.rs  mod.rs  naming.rs  naming_extra.rs  style.rs  style_extra1.rs  style_extra2.rs  style_extra3.rs
