[package]
name = "oxicop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A blazing-fast Ruby linter and formatter, reimplemented in Rust"
license = "MIT"
repository = "https://github.com/npow/oxicop"
homepage = "https://github.com/npow/oxicop"
keywords = ["ruby", "linter", "rubocop", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
ignore = "0.4"
colored = "2"
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
